implement outbreak, generalize hill climbing

--- a/ComplexNetwork_HW1_Q4_Q5.ipynb
+++ b/ComplexNetwork_HW1_Q4_Q5.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKX8NdESjrJaoz1QU9dnrT",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOpCmHw4btL9yj5Rh4L2j1I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "K5VpkOMpA5cV"
       },
@@ -67,7 +68,7 @@
       "metadata": {
         "id": "kWT7-a49B6Rd"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -109,7 +110,7 @@
       "metadata": {
         "id": "nBISchcVBpG-"
       },
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -130,10 +131,25 @@
         "    graph.add_edge(Edge(source=int(nodes[0]), destination=int(nodes[1])))"
       ],
       "metadata": {
-        "id": "E7u24ZKWCOXJ"
+        "id": "E7u24ZKWCOXJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0a0fb67-8e41-4b41-de9c-db4279b52257"
       },
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading...\n",
+            "From: https://snap.stanford.edu/data/ca-AstroPh.txt.gz\n",
+            "To: /content/ca-AstroPh.txt.gz\n",
+            "100% 1.45M/1.45M [00:00<00:00, 1.48MB/s]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -145,9 +161,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4LQOW1yD5aU",
-        "outputId": "99b12bf2-cf7c-41e7-f1ba-21734b09d820"
+        "outputId": "124c2528-f467-4483-de08-39f1a418492f"
       },
-      "execution_count": 18,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +173,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 4
         }
       ]
     },
@@ -171,9 +187,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ztL2tLAVD8y0",
-        "outputId": "f4d122d7-f280-4aed-b903-151cde710a70"
+        "outputId": "e3caa319-d75e-4196-a2d5-ad4ba4a941d1"
       },
-      "execution_count": 19,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +199,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 5
         }
       ]
     },
@@ -231,7 +247,54 @@
       "metadata": {
         "id": "0xqXfkfiEg3Q"
       },
-      "execution_count": 51,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def outbreak(graph:Graph, initial_nodes,\n",
+        "             probability=0.001, number_realization=1):\n",
+        " \n",
+        "  sensor_nodes = initial_nodes\n",
+        "  \n",
+        "  for _ in range(number_realization):\n",
+        "    effected_nodes = set()\n",
+        "    initial_outbreak_nodes = random.sample(graph.nodes, 10)\n",
+        "    effected_node_numbers = []\n",
+        "\n",
+        "    for outbreak_node in initial_outbreak_nodes:\n",
+        "      influencers = [outbreak_node]\n",
+        "      outbreak_detected = False\n",
+        "\n",
+        "      while(len(influencers)>0 and not outbreak_detected):\n",
+        "        new_influencers = set()\n",
+        "\n",
+        "        for influencer in influencers:\n",
+        "          effected_nodes.add(influencer)\n",
+        "\n",
+        "        for influencer in influencers:\n",
+        "          neighbours = graph.neighbour_set[influencer]\n",
+        "\n",
+        "          for neighbour in neighbours:\n",
+        "            if neighbour not in effected_nodes and random.random() < probability:\n",
+        "              new_influencers.add(neighbour)\n",
+        "\n",
+        "              if neighbour in sensor_nodes:\n",
+        "                outbreak_detected = True\n",
+        "\n",
+        "        influencers = list(new_influencers)\n",
+        "\n",
+        "    effected_node_numbers.append(len(effected_nodes))\n",
+        "  \n",
+        "  not_effected_node_numbers = len(graph.nodes) - np.average(effected_node_numbers)\n",
+        "\n",
+        "  return not_effected_node_numbers * 0.25"
+      ],
+      "metadata": {
+        "id": "kCUHNSS8OeIg"
+      },
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -244,19 +307,45 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BB6IxHkkKVPI",
-        "outputId": "012ee50a-2d80-4ac9-e1ec-6336d9e35281"
+        "outputId": "681a0fb9-c725-48bf-d01e-ae4372c87eea"
       },
-      "execution_count": 65,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "8.7657"
+              "8.7486"
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "outbreak(graph=graph, initial_nodes=[3, 65540, 65541, 4, 32776, 32777], probability=0.1, number_realization=10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OIe_1w9o-Hx9",
+        "outputId": "b99e6f01-71ca-4417-f518-d8d924533ca1"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12684.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     },
@@ -270,7 +359,7 @@
       "metadata": {
         "id": "ZFW0GOu5PAF8"
       },
-      "execution_count": 66,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -278,16 +367,18 @@
       "source": [
         "from copy import deepcopy\n",
         "import math\n",
-        "def influence_maximization_hill_climbing(graph:Graph, budget:float,\n",
-        "                                         cost_normal:bool,\n",
-        "                                         node_costs:dict,\n",
-        "                                         probability=0.001,\n",
-        "                                         number_realization=1,\n",
-        "                                         ):\n",
+        "def hill_climbing(graph:Graph,\n",
+        "                  budget:float,\n",
+        "                  benefit_function,\n",
+        "                  cost_normal:bool,\n",
+        "                  node_costs:dict,\n",
+        "                  probability=0.001,\n",
+        "                  number_realization=1):\n",
         "  \"\"\"\n",
         "  Args:\n",
         "    graph(Graph): The graph\n",
         "    budget(float): The maximum treshold for costs of selected nodes.\n",
+        "    benefit_function(function): The benefit function (f)\n",
         "    probability(float): The activation probability in the influence function. (See function influence)\n",
         "    number_realization(int): The number of realization in the influence function. (See function influence)\n",
         "    const_normal(bool): If this arg equals to true, the marginal gain will normalize with cost of each node.\n",
@@ -301,7 +392,7 @@
         "  remain_budget = budget\n",
         "\n",
         "  while(True):\n",
-        "    best_marginal_node_influece = -math.inf\n",
+        "    best_marginal_benefit = -math.inf\n",
         "    best_new_node = None\n",
         "\n",
         "    for node in graph.nodes:\n",
@@ -310,16 +401,16 @@
         "      initial_nodes = deepcopy(top_nodes)\n",
         "      initial_nodes.append(node)\n",
         "\n",
-        "      marginal_node_influece = influence(graph=graph,\n",
-        "                                         initial_nodes=initial_nodes,\n",
-        "                                         probability=probability,\n",
-        "                                         number_realization=number_realization)\n",
+        "      marginal_benefit = benefit_function(graph=graph,\n",
+        "                                                initial_nodes=initial_nodes,\n",
+        "                                                probability=probability,\n",
+        "                                                number_realization=number_realization)\n",
         "\n",
         "      if cost_normal:\n",
-        "        marginal_node_influece /= node_costs[node]\n",
+        "        marginal_benefit /= node_costs[node]\n",
         "\n",
-        "      if marginal_node_influece > best_marginal_node_influece:\n",
-        "        best_marginal_node_influece = marginal_node_influece\n",
+        "      if marginal_benefit > best_marginal_benefit:\n",
+        "        best_marginal_benefit = marginal_benefit\n",
         "        best_new_node = node\n",
         "\n",
         "    \n",
@@ -336,52 +427,39 @@
       "metadata": {
         "id": "ThSruLW5MO7e"
       },
-      "execution_count": 87,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "influence_maximization_hill_climbing(graph=graph,\n",
-        "                                     budget=10,\n",
-        "                                     probability=0.01,\n",
-        "                                     number_realization=5, \n",
-        "                                     cost_normal=False, node_costs=node_costs)"
+        "hill_climbing(graph=graph,\n",
+        "              budget=10,\n",
+        "              benefit_function=influence,\n",
+        "              probability=0.01,\n",
+        "              number_realization=5, \n",
+        "              cost_normal=False, node_costs=node_costs)"
       ],
       "metadata": {
-        "id": "aaG2B90JRgDP",
-        "outputId": "a36b9d2f-49f7-4ac2-9f18-3575f614612b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aaG2B90JRgDP",
+        "outputId": "d2a6f288-d12c-470c-f3d0-3663e37dd941"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "top_nodes = [111161]\n",
-            "top_nodes = [111161, 126106]\n",
-            "top_nodes = [111161, 126106, 48436]\n",
-            "top_nodes = [111161, 126106, 48436, 76406]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911, 32009]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911, 32009, 41554]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911, 32009, 41554, 64974]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911, 32009, 41554, 64974, 63401]\n",
-            "top_nodes = [111161, 126106, 48436, 76406, 50911, 32009, 41554, 64974, 63401, 39542]\n"
+            "top_nodes = [47968]\n",
+            "top_nodes = [47968, 24650]\n",
+            "top_nodes = [47968, 24650, 77858]\n",
+            "top_nodes = [47968, 24650, 77858, 111161]\n",
+            "top_nodes = [47968, 24650, 77858, 111161, 93504]\n",
+            "top_nodes = [47968, 24650, 77858, 111161, 93504, 99499]\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[111161, 126106, 48436, 76406, 50911, 32009, 41554, 64974, 63401, 39542]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 88
         }
       ]
     },
@@ -426,13 +504,13 @@
         "  print(len(graph.neighbour_set[node]))"
       ],
       "metadata": {
-        "id": "1HE6ThX6W3mv",
-        "outputId": "82a7e2f8-ab9d-4107-ef71-8b7c021aa3f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1HE6ThX6W3mv",
+        "outputId": "82a7e2f8-ab9d-4107-ef71-8b7c021aa3f5"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,13 +537,13 @@
         "  print(len(graph.neighbour_set[node]))"
       ],
       "metadata": {
-        "id": "4fINmJFFWnuQ",
-        "outputId": "00818351-be5c-4848-ea56-14d65e10d07c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4fINmJFFWnuQ",
+        "outputId": "00818351-be5c-4848-ea56-14d65e10d07c"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,13 +569,13 @@
         "influence(graph=graph, initial_nodes=[111161, 126106, 48436, 76406, 50911, 32009, 41554, 64974, 63401, 39542], probability=0.01, number_realization=5)"
       ],
       "metadata": {
-        "id": "uy9XCo8FWq3O",
-        "outputId": "86a1e709-834f-4056-804c-0ca9c628f871",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uy9XCo8FWq3O",
+        "outputId": "86a1e709-834f-4056-804c-0ca9c628f871"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -517,13 +595,13 @@
         "influence(graph=graph, initial_nodes=[44322, 34023, 40773, 56914, 3169, 70866, 56669, 15615, 95784, 92163], probability=0.01, number_realization=5)"
       ],
       "metadata": {
-        "id": "Aj0Z7rVHXBci",
-        "outputId": "9d066f9a-49b7-4ab3-dbfd-67183b56528f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Aj0Z7rVHXBci",
+        "outputId": "9d066f9a-49b7-4ab3-dbfd-67183b56528f"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -543,13 +621,13 @@
         "influence(graph=graph, initial_nodes=random.sample(graph.nodes, 10), probability=0.01, number_realization=5)"
       ],
       "metadata": {
-        "id": "Wck8Iz2WXGHi",
-        "outputId": "457a236e-4d1f-4b89-a7ae-fc0e996323fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Wck8Iz2WXGHi",
+        "outputId": "457a236e-4d1f-4b89-a7ae-fc0e996323fd"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
